[project]
name = "nextmv-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nextmv",
    "polars>=1.22.0",
]

[dependency-groups]
dev = [
    "pip>=25.0.1",
]

[tool.uv.sources]
nextmv = { path = "../nextmv-py/nextmv" }
